--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,15 +30,29 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.6.0'
-    implementation 'com.google.android.material:material:1.7.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    //MAIN
+    //implementation 'androidx.core:core-ktx:1.7.0'
+    implementation Dependencies.coreKtx
+    //implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation Dependencies.appCompat
+    //implementation 'com.google.android.material:material:1.7.0'
+    implementation Dependencies.materialDesign
+    //implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation Dependencies.constraintLayout
+    //LIFECYCLE
+
+    //TEST
+    //testImplementation 'junit:junit:4.13.2'
+    implementation Dependencies.jUnit
+    //androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    implementation Dependencies.testExt
+    //androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation Dependencies.espressoCore
 }
