--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -47,8 +49,22 @@ dependencies {
     implementation Dependencies.navigation
     implementation Dependencies.navigationUi
     implementation Dependencies.navigationFeature
+    //HTTP
+    /*implementation Dependencies.retrofit
+    implementation Dependencies.gson
+    implementation Dependencies.loggingInterceptor*/
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.4.1"
     //MAPS
     implementation Dependencies.maps
+    //HILT
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
+    /*implementation Dependencies.daggerHilt
+    implementation Dependencies.daggerCompiler*/
+    //PICASSO
+    implementation Dependencies.picasso
 
     //TEST
     //testImplementation 'junit:junit:4.13.2'
@@ -58,3 +74,7 @@ dependencies {
     //androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation Dependencies.espressoCore
 }
+
+/*kapt {
+    correctErrorTypes true
+}*/
