--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,11 +70,14 @@ dependencies {
 
     //TEST
     //testImplementation 'junit:junit:4.13.2'
-    implementation Dependencies.jUnit
+    testImplementation Dependencies.jUnit
+    testImplementation "io.mockk:mockk:1.12.2"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
     //androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    implementation Dependencies.testExt
+    androidTestImplementation Dependencies.testExt
     //androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation Dependencies.espressoCore
+    androidTestImplementation Dependencies.espressoCore
 }
 
 /*kapt {
