--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,18 +50,13 @@ dependencies {
     implementation Dependencies.navigationUi
     implementation Dependencies.navigationFeature
     //HTTP
-    /*implementation Dependencies.retrofit
+    implementation Dependencies.retrofit
     implementation Dependencies.gson
-    implementation Dependencies.loggingInterceptor*/
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:3.4.1"
+    implementation Dependencies.loggingInterceptor
     //MAPS
     implementation Dependencies.maps
     //HILT
-    //implementation "com.google.dagger:hilt-android:2.44"
     implementation Dependencies.daggerHilt
-    //kapt "com.google.dagger:hilt-compiler:2.44"
     kapt Dependencies.daggerCompiler
     //PICASSO
     implementation Dependencies.picasso
